@@ -633,7 +633,8 @@ class GeoDir_Post_Data {
 			$i_post_id = ! empty( $gd_post['revision_ID'] ) ? $gd_post['revision_ID'] : $post_id;
 			if ( isset( $gd_post['post_images'] ) && ! wp_is_post_revision( absint( $post_id ) ) ) {
 				$featured_image = self::save_files( $i_post_id, $gd_post['post_images'], 'post_images', $is_dummy );
-				if ( ! empty( $featured_image ) ) {
+
+				if ( ! empty( $featured_image ) || $featured_image === '' ) {
 					$postarr['featured_image'] = $featured_image;
 				}
 			}
